<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:onClick="onSettingsMenuClick"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        android:onClick="onSettingsMenuClick"
        app:showAsAction="never"/>
    <item
        android:id="@+id/tasks"
        android:orderInCategory="100"
        android:title="@string/tasks"
        android:onClick="onSettingsMenuClick"
        app:showAsAction="never"/>

</menu>