<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="ru.novikov_dm.studystraus.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewThem"
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingTop="5dp"
            android:paddingRight="3dp"
            android:paddingBottom="5dp"
            android:text="@string/text_view"
            android:textSize="27sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:background="#ffc046"
            android:onClick="toProblems1"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:background="#ffc046"
            android:onClick="toProblems2"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:background="#ffc046"
            android:onClick="toProblems3"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:background="#ffc046"
            android:onClick="toProblems4"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="0dp"
            android:background="#ffc046"
            android:onClick="toProblems5"
            android:text="@string/button5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>